--- a/admin/config.yml
+++ b/admin/config.yml
@@ -50,6 +50,20 @@ collections:
     create: true
     slug: "{{fields.name}}"
     fields:
-      - {label: "Name", name: "name", widget: "string"}
-      - {label: "Email", name: "email", widget: "string"}
-      - {label: "GitHub", name: "github", widget: "string"}
+      - { label: "Name", name: "name", widget: "string" }
+      - { label: "Email", name: "email", widget: "string" }
+      - { label: "GitHub", name: "github", widget: "string" }
+
+  - label: "Settings"
+    name: "settings"
+    files:
+      - label: "Owner Details"
+        name: "owner"
+        file: "owner.yaml"
+        fields:
+          - { label: Name, name: name, widget: string }
+          - { label: Age, name: age, widget: number }
+          - label: Bio
+            name: bio
+            widget: markdown
+          - { label: Hobbies, name: hobbies, widget: list }
